--- a/customize.yaml
+++ b/customize.yaml
@@ -74,3 +74,11 @@ sensor.drachenbaum_light:
   icon: mdi:weather-sunny
 sensor.drachenbaum_moisture:
   icon: mdi:cup-water
+sensor.feinblatt_light:
+  icon: mdi:weather-sunny
+sensor.feinblatt_moisture:
+  icon: mdi:cup-water
+sensor.feinstaub_pm10:
+  icon: mdi:emoticon-dead
+sensor.feinstaub_pm25:
+  icon: mdi:emoticon-dead
