--- a/group.yaml
+++ b/group.yaml
@@ -82,19 +82,18 @@ Office:
 Weather:
   entities:
     - sun.sun
-    - sensor.dark_sky_icon
     - sensor.dark_sky_summary
     - sensor.dark_sky_temperature
-    - sensor.dark_sky_apparent_temperature
     - sensor.dark_sky_dew_point
     - sensor.dark_sky_humidity
-    - sensor.dark_sky_precip
-    - sensor.dark_sky_precip_probability
     - sensor.dark_sky_wind_speed
-    - sensor.dark_sky_wind_bearing
     - sensor.dark_sky_pressure
     - sensor.dark_sky_cloud_coverage
     - sensor.dark_sky_precip_intensity
+    - sensor.feinstaub_pm10
+    - sensor.feinstaub_pm25
+    - sensor.feinstaub_temperature
+    - sensor.feinstaub_humidity
 
 Connectivity:
   entities:
