--- a/sensor.yaml
+++ b/sensor.yaml
@@ -54,12 +54,12 @@
 
   - platform: mqtt
     state_topic: 'home/bedroom'
-    name: 'Temperature MQTT Be'
+    name: 'Bedroom Temperature'
     unit_of_measurement: '°C'
     value_template: '{{ value_json.temperature }}'
   - platform: mqtt
     state_topic: 'home/bedroom'
-    name: 'Humidity MQTT Be'
+    name: 'Bedroom Humidity'
     unit_of_measurement: '%'
     value_template: '{{ value_json.humidity }}'
 
