--- a/automation/appletv.yaml
+++ b/automation/appletv.yaml
@@ -4,6 +4,9 @@
       platform: state
       entity_id: media_player.apple_tv
       to: 'playing'
+    condition:
+      condition: template
+      value_template: '{{ states.media_player.apple_tv.attributes.media_content_type == "movie" }}'
     action:
       - service: homeassistant.turn_off
         entity_id: group.living_room_lights
@@ -14,6 +17,9 @@
       entity_id: media_player.apple_tv
       from: 'playing'
       to: 'paused'
+    condition:
+      condition: template
+      value_template: '{{ states.media_player.apple_tv.attributes.media_content_type == "movie" }}'
     action:
       - service: homeassistant.turn_on
         entity_id: scene.dim_living_room
