--- a/sensor.yaml
+++ b/sensor.yaml
@@ -15,7 +15,9 @@
     api_key: !secret darksky_api_key
     monitored_conditions:
       - summary
+      - icon
       - precip_intensity
+      - precip_probability
       - temperature
       - dew_point
       - wind_speed
