--- a/group.yaml
+++ b/group.yaml
@@ -85,6 +85,7 @@ Weather:
     - sensor.dark_sky_pressure
     - sensor.dark_sky_cloud_coverage
     - sensor.dark_sky_precip_intensity
+    - sensor.dark_sky_precip_probability
     - sensor.feinstaub_pm10
     - sensor.feinstaub_pm25
     - sensor.feinstaub_temperature
