--- a/group.yaml
+++ b/group.yaml
@@ -35,6 +35,7 @@ Living room electronics:
   entities:
     - light.stereoanlage
     - media_player.apple_tv
+    - sensor.current_title
     - sensor.sonarr_upcoming
 
 Living room climate:
