Nginx is proxying the web interface … reflect that

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -16,6 +16,9 @@ frontend:
 # Enable API password
 http:
   api_password: !secret http_password
+  server_host: 127.0.0.1
+  use_x_forwarded_for: true
+  base_url: homeassistant
 
 config:
 
