--- a/customize.yaml
+++ b/customize.yaml
@@ -106,6 +106,13 @@ sensor.aeotec_zw074_multisensor_gen5_temperature_2_1:
 binary_sensor.aeotec_zw074_multisensor_gen5_sensor_2_0:
   friendly_name: 'Hallway Sensor'
 
+sensor.living_room_humidity:
+  icon: mdi:water-percent
+sensor.bedroom_humidity:
+  icon: mdi:water-percent
+sensor.bathroom_humidity:
+  icon: mdi:water-percent
+
 media_player.apple_tv:
   hidden: true
 
