--- a/sensor.yaml
+++ b/sensor.yaml
@@ -58,12 +58,12 @@
 
   - platform: mqtt
     state_topic: 'home/bathroom'
-    name: 'Temperature MQTT Ba'
+    name: 'Bathroom Temperature'
     unit_of_measurement: '°C'
     value_template: '{{ value_json.temperature }}'
   - platform: mqtt
     state_topic: 'home/bathroom'
-    name: 'Humidity MQTT Ba'
+    name: 'Bathroom Humidity'
     unit_of_measurement: '%'
     value_template: '{{ value_json.humidity }}'
 
