Using hue-group as action entity (simultaneous on/off)

--- a/automation/presence_based.yaml
+++ b/automation/presence_based.yaml
@@ -82,6 +82,5 @@
     action:
       - service: homeassistant.turn_off
         entity_id:
-          - light.flur_hinten
-          - light.flur_vorne
+          - light.hueflur
 
