--- a/automation/notifications.yaml
+++ b/automation/notifications.yaml
@@ -5,9 +5,6 @@
       entity_id: sensor.bedroom_humidity
       above: 70
     action:
-      - service: notify.matrix_local
-        data_template:
-          message: "Schlafzimmer: Die Luftfeuchtigkeit ist bei {{ states.sensor.bedroom_humidity.state }} %."
       - service: notify.instapush
         data_template:
           title: "Schlafzimmer"
@@ -19,10 +16,6 @@
       entity_id: sensor.living_room_humidity
       above: 70
     action:
-      - service: notify.matrix_local
-        data_template:
-          message: "Wohnzimmer: Die Luftfeuchtigkeit ist bei {{ states.sensor.living_room_humidity.state }} %."
-
       - service: notify.instapush
         data_template:
           title: "Wohnzimmer"
@@ -34,10 +27,6 @@
       entity_id: sensor.drachenbaum_moisture
       below: 15
     action:
-      - service: notify.matrix_local
-        data_template:
-          message: "Wohnzimmer: Bitte gießt den Drachenbaum!"
-
       - service: notify.instapush
         data_template:
           title: "Wohnzimmer"
@@ -46,13 +35,9 @@
   - alias: Plant Moisture Grünlilie
     trigger:
       platform: numeric_state
-      entity_id: sensor.feinblatt_moisture
+      entity_id: sensor.grunlilie_moisture
       below: 40
     action:
-      - service: notify.matrix_local
-        data_template:
-          message: "Wohnzimmer: Bitte gießt den Grünlilie! Die Erde hat eine Feuchtigkeit von {{ states.sensor.feinblatt_moisture.state }} %."
-
       - service: notify.instapush
         data_template:
           title: "Wohnzimmer"
